--- a/platformio.ini
+++ b/platformio.ini
@@ -17,4 +17,6 @@ lib_deps =
 	adafruit/DHT sensor library@^1.4.6
 	adafruit/Adafruit Unified Sensor@^1.1.15
 	adafruit/Adafruit ADS1X15@^2.6.0
+	knolleary/PubSubClient@^2.8
+	bblanchon/ArduinoJson@^7.4.2
 "d = \PlatformIO\Projects"
